# Op

./: CMakeLists.txt  main.cpp
inc/: funcs.hpp
src/: funcs.cpp
